--- a/plugin.xml
+++ b/plugin.xml
@@ -7,7 +7,7 @@
     xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="community-cordova-plugin-nfc"
-    version="1.5.0">
+    version="1.5.4">
 
     <name>NFC</name>
     <description>Community Cordova NFC Plugin - Read and write NDEF messages, advanced tag analysis, raw memory access</description>
@@ -140,7 +140,7 @@
         <framework src="CoreNFC.framework" weak="true" />
 
         <preference name="NFC_USAGE_DESCRIPTION" default="Read NFC Tags" />
-        <config-file target="*-Info.plist" parent="NFCReaderUsageDescription">
+        <config-file target="App/App-Info.plist" parent="NFCReaderUsageDescription">
             <string>$NFC_USAGE_DESCRIPTION</string>
         </config-file>
     </platform>
